--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "type": "module",
   "license": "MIT",
   "author": "Deyvid Fernandes",
+  "homepage": "https://deyvidfernandes.github.io/react-tic-tac-toe/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
